feat: created payemt handlers, request.md file amongst others
