# src/controller/tenant.go
@@ -27,3 +27,19 @@ func (c *Controller) CreateTenant(ctx context.Context, tenant model.Tenant) (mod
 
 	return newTenant, nil
 }
+
+// AuthenticateTenant returns a model.Tenant object of matching email and password(not hashed password) else returns an error
+func (c *Controller) AuthenticateTenant(ctx context.Context, email, password string) (model.Tenant, error) {
+	tenant, err := c.tenantStorage.GetTenantByEmail(ctx, strings.ToLower(email))
+	if err != nil {
+		c.logger.Err(err).Msgf("AuthenticateTenant::: Unable to fetch user details %s", err)
+		return model.Tenant{}, ErrIncorrectLoginDetails
+	}
+
+	// check password hash
+	if ok := tenant.Password.Check(model.Password(password)); !ok {
+		return model.Tenant{}, ErrIncorrectLoginDetails
+	}
+
+	return tenant, nil
+}
