# src/docs/swagger.json
@@ -18,7 +18,7 @@
         },
         "version": "1.0"
     },
-    "host": "multi-tenant-api.onrender.com",
+    "host": "localhost:5002",
     "basePath": "/api/v1",
     "paths": {
         "/auditLog/transaction/{id}": {
@@ -170,6 +170,13 @@
                 "summary": "user signup",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Bearer \u003ctoken\u003e. Pass in the tenant access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "signup request body",
                         "name": "signupRequest",
                         "in": "body",
@@ -203,6 +210,13 @@
                 ],
                 "summary": "updateUserByID",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer \u003ctoken\u003e",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "update user request body",
                         "name": "updateUserRequest",
@@ -239,6 +253,13 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Bearer \u003ctoken\u003e",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "userID",
                         "name": "id",
                         "in": "path"
@@ -247,6 +268,108 @@
                 "responses": {
                     "200": {
                         "description": "user details fetched successfully",
+                        "schema": {
+                            "$ref": "#/definitions/model.GenericResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/payment/bank-transfer": {
+            "post": {
+                "description": "this endpoint is used to get a one time virtual account that is to be used top up once wallet",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "payment"
+                ],
+                "summary": "bankTransfer",
+                "parameters": [
+                    {
+                        "description": "bank transfer request body",
+                        "name": "bankTransferRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/payment.bankTransferRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "bank account created successful",
+                        "schema": {
+                            "$ref": "#/definitions/model.GenericResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/payment/deposit": {
+            "post": {
+                "description": "this endpoint is used to make a deposit",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "payment"
+                ],
+                "summary": "makeDeposit",
+                "parameters": [
+                    {
+                        "description": "deposit request body",
+                        "name": "depositRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/payment.depositRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "wallet top up successful",
+                        "schema": {
+                            "$ref": "#/definitions/model.GenericResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/payment/transfer": {
+            "post": {
+                "description": "this endpoint is used to make transfer",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "payment"
+                ],
+                "summary": "makeTransfer",
+                "parameters": [
+                    {
+                        "description": "make transfer request body",
+                        "name": "makeTransferRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/payment.makeTransferRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "transfer successful",
                         "schema": {
                             "$ref": "#/definitions/model.GenericResponse"
                         }
@@ -335,6 +458,40 @@
                 "responses": {
                     "201": {
                         "description": "tenant created successfully",
+                        "schema": {
+                            "$ref": "#/definitions/model.GenericResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/tenant/login": {
+            "post": {
+                "description": "this endpoint is used to log a user in",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "login",
+                "parameters": [
+                    {
+                        "description": "login request body",
+                        "name": "loginRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/tenant.loginRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "tenant logged in successfully",
                         "schema": {
                             "$ref": "#/definitions/model.GenericResponse"
                         }
@@ -495,6 +652,15 @@
                     "wallet"
                 ],
                 "summary": "getWalletByUserID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer \u003ctoken\u003e",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "wallet balance fetched successfully",
@@ -576,6 +742,66 @@
                 },
                 "page": {
                     "description": "Page is the pagination info"
+                }
+            }
+        },
+        "payment.bankTransferRequest": {
+            "type": "object",
+            "required": [
+                "bankNumber",
+                "fullName"
+            ],
+            "properties": {
+                "bankNumber": {
+                    "type": "string"
+                },
+                "fullName": {
+                    "type": "string"
+                }
+            }
+        },
+        "payment.depositRequest": {
+            "type": "object",
+            "required": [
+                "amount"
+            ],
+            "properties": {
+                "amount": {
+                    "type": "number"
+                }
+            }
+        },
+        "payment.makeTransferRequest": {
+            "type": "object",
+            "required": [
+                "accountNumber",
+                "amount",
+                "bankNumber"
+            ],
+            "properties": {
+                "accountNumber": {
+                    "type": "string"
+                },
+                "amount": {
+                    "type": "number"
+                },
+                "bankNumber": {
+                    "type": "string"
+                }
+            }
+        },
+        "tenant.loginRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
                 }
             }
         },
